# Fortress

./: .gitignore  README.md  config.yaml  pyproject.toml  start_fortress.bat
fortress/: __init__.py  __main__.py  cli.py  main.py  main_tk.py
fortress/core/: __init__.py  actions.py  auth.py  camera_registry.py  config.py  context.py  database.py  event_bus.py  metrics.py  plugin.py  rules.py
fortress/eye/: __init__.py  launcher.py
fortress/hud/: __init__.py  opencv_hud.py
fortress/plugins/: __init__.py  camera.py  email_monitor.py  file_watcher.py  home_assistant.py  mqtt.py  network_monitor.py  process_monitor.py  telegram.py  yolo_detector.py
fortress/reasoner/: __init__.py  reasoner.py
fortress/strazh/: __init__.py  launcher.py
fortress/web/: __init__.py  app.py
tests/: test_camera.py  test_core.py  test_hud.py  test_phase5.py  test_plugins_extra.py  test_reasoner.py  test_web.py
